# wgan-gp

./: README.md  multivariate_normal_dataset.ipynb  pyproject.toml  training_wgangp.ipynb  wgan.py
datasets/: multivariate_normal_dim20.csv
