[tool.poetry]
name = "wgan"
version = "0.1.0"
description = ""
authors = ["Antonioni Campos <antonioni.campos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.0"
tensorflow = "^2.12.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
